--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,23 @@
-.gallery-image {
-    width: 360;
-    height: 200;
-}
-.gallery-item {
+
+.gallery {
+    list-style-type: none;
+    margin: 24px auto;
+    width: 1128px;
     display: flex;
     gap: 24px;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+}
+.gallery-image {
+        width: 360px;
+        height: 200px;
+}
+.gallery-item {
+    transition: transform 0.3s ease-in-out;
+}
 
+.gallery-item:hover {
+    transform: scale(1.044);
+    
 }
